--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 var client_id = '92b11541ab694d1699eca606cb416622';
 var redirect_uri = 'https://nmittu.github.io/Spotify-For-Pebble-Callback';
-var scope = 'user-read-private user-read-email playlist-read-private user-modify-playback-state';
+var scope = 'user-read-private user-read-email playlist-read-private user-modify-playback-state user-read-playback-state';
 
 function getQueryParam(variable, defaultValue) {
   var query = location.search.substring(1);
